# AI-assistant

./: .dockerignore  .env.example  .gitignore  0.46.1  CHANGELOG.md  Dockerfile  EVALUATION.md  EVALUATION_REPORT.md  Makefile  README.md  TODO.md  docker-compose.yml  promptfoo result.html  pyproject.toml  requirements-local.txt  requirements.txt
.cursor/rules/: keep-it-simple.mdc  test-driven-todo.mdc  todo-tracker.mdc  version-changelog.mdc
.deepeval/: .deepeval_telemetry.txt
.streamlit/: config.toml
agent/: __init__.py  factory.py  local_llm.py  models.py  system_prompt.py
app/: __init__.py  dashboard.py  streamlit_app.py
app/components/: __init__.py  chat_window.py  guardrail_panel.py  state_panel.py  stream_handler.py  thread_sidebar.py
app/pages/: 01_chat.py  02_observability.py  03_evaluation.py  __init__.py
config/: pricing_fallback.json
deployment/hf_spaces/: app.py  requirements.txt
evaluation/: __init__.py  charts.py  deepeval_metrics.py  framework.py  langsmith_sync.py  llm_judge.py  promptfoo.yaml  run_eval.py
evaluation/benchmarks/: __init__.py  loader.py
evaluation/prompts/: adversarial.json  bias_sensitive.json  factual.json
evaluation/results/: _partial_cache.json  model_scores.json  model_scores.schema.json
guardrails/: __init__.py  input_guard.py  llamaguard.py  nemo_client.py  output_guard.py  validators.py
guardrails/nemo/: config.yml  rails.co
memory/: __init__.py  converters.py  manager.py  summariser.py
observability/: __init__.py  langfuse_query.py  logger.py  pricing.py
promptfoo result_files/: config.js.download  index-CHuUinsJ.js.download  index-KLslCPAR.css
serve/: modal_server.py  model_server.py  nemo_modal.py  presidio_modal.py
tests/: __init__.py  test_agent.py  test_evaluation.py  test_guardrails.py  test_judge.py  test_memory.py  test_observability.py  test_tools.py
tools/: __init__.py  evaluation_tool.py  metrics_tool.py  observability_tool.py  registry.py  search_tool.py  time_tool.py  weather_tool.py
