[project]
name = "ai-assistant"
version = "0.3.1"
description = "AI Assistant Comparison — Claude Sonnet vs Qwen 2.5 0.5B with full evaluation suite"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
