[project]
name = "ai-assistant"
version = "0.7.2"
description = "AI Assistant Comparison — Claude Sonnet vs Qwen 2.5 0.5B with full evaluation suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-huggingface>=0.1",
    "langgraph>=0.2",
    "langfuse>=2.0",
    "langsmith>=0.1",
    "deepeval>=1.4",
    "datasets>=2.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "nemoguardrails>=0.9",
    "filelock>=3.0",
    "duckduckgo-search>=6.0",
    "requests>=2.31",
    "streamlit>=1.35",
    "gradio>=4.0",
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.30",
    "nest-asyncio>=1.6",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
