[project]
name = "ai-assistant"
version = "0.12.0"
description = "AI Assistant Comparison — Claude Sonnet vs Qwen 2.5 0.5B with full evaluation suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.1",
    "langchain-huggingface>=0.1",
    "langgraph>=0.2",
    "langfuse>=2.0",
    "langsmith>=0.1",
    "deepeval>=1.4",
    "datasets>=2.0",
    "filelock>=3.0",
    "ddgs>=6.0",
    "requests>=2.31",
    "streamlit>=1.35",
    "python-dotenv>=1.0",
    "nest-asyncio>=1.6",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "nemoguardrails>=0.9",
    "gradio>=4.0",
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.30",
    "modal>=0.73",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "bitsandbytes>=0.46.1",
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "memory*", "tools*", "guardrails*", "observability*", "app*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
